namespace/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app.kubernetes.io/name: radarr
spec:
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: radarr-ui
  type: ClusterIP
