namespace/media/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-http-route
  namespace: media
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "radarr.oglesby.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
