namespace/media/radarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: radarr
          port: 7878
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: radarr
          port: 7878
